# void-for-academy

./: .gitignore  Makefile  package-lock.json  package.json  product.json
acad-backend/: acad.db  pyproject.toml
acad-backend/acad/: config.py  main.py
acad-backend/acad/agents/: abnt.py  base.py  leader.py  references.py  reviewer.py  writer.py
acad-backend/acad/knowledge/: abnt.py  loader.py  templates.py
acad-backend/acad/memory/: session.py  user.py
acad-backend/acad/tools/: academic_tools.py  ide_tools.py
acad-backend/acad/workflows/: chapter.py  references.py  review.py
acad-backend/knowledge/abnt/: nbr10520-resumo.txt  nbr14724-resumo.txt  nbr6023-resumo.txt
acad-backend/knowledge/templates/tcc-abnt/: main.tex  referencias.bib
acad-backend/knowledge/templates/tese-abnt/: main.tex
acad-backend/scripts/: bootstrap.sh
extensions/theme-defaults/: package.json  package.nls.json
extensions/theme-defaults/themes/: acad_dark.json
resources/darwin/: acad.icns
resources/win32/: VisualElementsManifest.xml
src/vs/code/electron-main/: app.ts
src/vs/code/electron-sandbox/workbench/: workbench-dev.html  workbench.html
src/vs/workbench/browser/: workbench.contribution.ts
src/vs/workbench/browser/actions/: layoutActions.ts
src/vs/workbench/browser/parts/: paneCompositeBar.ts
src/vs/workbench/browser/parts/auxiliarybar/: auxiliaryBarActions.ts  auxiliaryBarPart.ts
src/vs/workbench/browser/parts/editor/: editorGroupWatermark.ts
src/vs/workbench/browser/parts/panel/: panelActions.ts
src/vs/workbench/test/browser/: contributions.test.ts
(+45 files in other folders)
