[project]
name = "acad-backend"
version = "0.1.0"
description = "Acad AgentOS - Academic writing multi-agent system powered by Agno"
requires-python = ">=3.11"
dependencies = [
    "agno[os]",
    "anthropic",
    "openai",
    "lancedb",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acad"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
